<?xml version="1.0"?>
<package format="3">
  <name>time_publisher</name>
  <version>0.0.1</version>
  <description>The time_publisher ROS 2 package</description>
  <maintainer email="vlongbf@gmail.com">bun</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

